--- a/main.html
+++ b/main.html
@@ -8,6 +8,17 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<main>
+		<h2>Testimonials</h2>
+		<section class="testimonial">
+			<h4 class="heading">The product is amazing</h4>
+			<p class="author">-John Doe</p>
+		</section>
+		<section class="testimonial">
+			<h4 class="heading">The product is amazing</h4>
+			<p class="author">-Jane Smith</p>
+		</section>
+	</main>
     <script type="text/javascript" src="./script.js">
 </script>
 
