--- a/main.html
+++ b/main.html
@@ -9,15 +9,15 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<main>
-		<h2>Testimonials</h2>
-		<section class="testimonial">
-			<h4 class="heading">The product is amazing</h4>
+		<h1>Testimonials</h1>
+		<div class="testimonial">
+			<p class="heading">The product is amazing</p>
 			<p class="author">-John Doe</p>
-		</section>
-		<section class="testimonial">
-			<h4 class="heading">The product is amazing</h4>
+		</div>
+		<div class="testimonial">
+			<p class="heading">The product is amazing</p>
 			<p class="author">-Jane Smith</p>
-		</section>
+		</div>
 	</main>
     <script type="text/javascript" src="./script.js">
 </script>
